newtype-tools/tests/trybuild/ops/bitxor.stderr
error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/trybuild/ops/bitxor.rs:5:22
  |
5 |     #[newtype(bitxor())]
  |                      ^

error: expected `,`
  --> tests/trybuild/ops/bitxor.rs:11:25
   |
11 |     #[newtype(bitxor(u64))]
   |                         ^

error: unexpected end of input, expected `output`
  --> tests/trybuild/ops/bitxor.rs:17:26
   |
17 |     #[newtype(bitxor(u64,))]
   |                          ^

error: expected `=`
  --> tests/trybuild/ops/bitxor.rs:23:33
   |
23 |     #[newtype(bitxor(u64, output))]
   |                                 ^

error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/trybuild/ops/bitxor.rs:29:35
   |
29 |     #[newtype(bitxor(u64, output =))]
   |                                   ^

error: expected `,`
  --> tests/trybuild/ops/bitxor.rs:35:39
   |
35 |     #[newtype(bitxor(u64, output = u64))]
   |                                       ^

error: unexpected end of input, expected `with`
  --> tests/trybuild/ops/bitxor.rs:41:40
   |
41 |     #[newtype(bitxor(u64, output = u64,))]
   |                                        ^

error: expected `=`
  --> tests/trybuild/ops/bitxor.rs:47:45
   |
47 |     #[newtype(bitxor(u64, output = u64, with))]
   |                                             ^

error: unexpected end of input, expected an expression
  --> tests/trybuild/ops/bitxor.rs:53:47
   |
53 |     #[newtype(bitxor(u64, output = u64, with =))]
   |                                               ^
